angular-history.js added to index.html

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -51,6 +51,7 @@
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload-shim.js"></script>
     <script src="bower_components/raven-js/dist/raven.js"></script>
+    <script src="bower_components/angular-history/history.js"></script>
 
     <script src="bower_components/angular-embed/dist/angular-embed.js"></script>
     <script src="bower_components/angular-contenteditable/angular-contenteditable.js"></script>
