chore(cores): Update superdesk cores for NTB

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -331,6 +331,10 @@
                 change_profile: 1
         };
 
+        config.editor = {
+            imageDragging: true
+        };
+
         var tansa = {};
         tansa.settings = {};
        
