FIxed config for not creating package

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -267,7 +267,8 @@
             alchemy: 1,
             customAuthoringTopbar: true,
             useTansaProofing: true,
-            editFeaturedImage: 0
+            editFeaturedImage: 0,
+            hideCreatePackage: true
         };
 
         config.user = {
