Added custom monitoring widget for ntb

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -268,7 +268,8 @@
             customAuthoringTopbar: true,
             useTansaProofing: true,
             editFeaturedImage: 0,
-            hideCreatePackage: true
+            hideCreatePackage: true,
+            customMonitoringWidget: true
         };
 
         config.user = {
