Scanpix search shortcut for ntb

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -269,7 +269,8 @@
             useTansaProofing: true,
             editFeaturedImage: 0,
             hideCreatePackage: true,
-            customMonitoringWidget: true
+            customMonitoringWidget: true,
+            scanpixSearchShortcut: true
         };
 
         config.user = {
