Ansa related changes

--- a/client/ansa/widgets/ansa-related-widget.html
+++ b/client/ansa/widgets/ansa-related-widget.html
@@ -1,17 +1,24 @@
 <div id="ansa-related-widget" ng-controller="AnsaRelatedCtrl as related">
+    <div class="sd-searchbar sd-searchbar--border-bottom sd-searchbar--small" ng-class="{'sd-searchbar--focused': focused}">
+        <label for="search-input" class="sd-searchbar__icon"></label>
+        <input id="search-input"
+                class="sd-searchbar__input"
+                type="text"
+                placeholder="{{ 'Search'|translate }}"
+                ng-model="related.query"
+                ng-focus="focused = true"
+                ng-keyup="related.searchOnEnter($event)"
+                tabindex="1">
+    </div>
     <div class="widget" sd-loading="!related.items">
-        <input type="text" class="input-xlarge" placeholder="search" ng-model="related.query" ng-keyup="related.searchOnEnter($event)">
-        <p></p>
-
-        <ul class="ingest-list list-view related-item-list" sd-loading="!related.items">
+        <ul class="simple-list simple-list--comfortable simple-list--dotted simple-list--no-padding" sd-loading="!related.items">
             <li ng-repeat="item in related.items track by $index"
-                class="list-item-view" sd-draggable-item ng-init="isCollapsed = item.type === 'text'">
+                class="simple-list__item" sd-draggable-item ng-init="isCollapsed = item.type === 'text'">
                 <div class="basic item-block">
-                    <i sd-filetype-icon data-item="item" style=""></i>
+                    <i sd-filetype-icon data-item="item"></i>
                     <span class="keyword" ng-click="isCollapsed = !isCollapsed">{{ item.headline }}</span>
-                    <div class="content">
-                        <span class="headline"><time sd-datetime data-date="item.versioncreated"></time></span>
-
+                    <div class="headline"><time sd-datetime data-date="item.versioncreated"></time></div>
+                    <div class="collapsed-content">
                         <div ng-if="item.body_html && item.type !== 'picture'" ng-hide="isCollapsed">
                             <div sd-html-preview="item.body_html"></div>
                         </div>
@@ -23,17 +30,28 @@
                 </div>
             </li>
             <li ng-if="related.items.length === 0">
-                <p translate>Not found.</p>
+                <p ></p>
+                <div class="panel-info">
+                    <div class="panel-info__icon">
+                        <i class="big-icon--info"></i>
+                    </div>
+                    <h3 class="panel-info__heading" translate>Not found.</h3>
+                </div>
             </li>
         </ul>
-
-        <div class="btn-group">
-            <button class="btn"
+        <div class="button-list">
+            <button class="toggle-button"
                 ng-click="related.filter('text')"
-                ng-disabled="related.activeFilter == 'text'">Text</button>
-            <button class="btn"
+                ng-class="{'toggle-button--active': related.activeFilter == 'text'}" sd-tooltip="{{'Text' | translate}}" flow="down">
+                <i class="toggle-button__icon filetype-icon-text"></i>
+                
+            </button>
+            <button class="toggle-button"
                 ng-click="related.filter('picture')"
-                ng-disabled="related.activeFilter == 'picture'">Pictures</button>
+                ng-class="{'toggle-button--active': related.activeFilter == 'picture'}" sd-tooltip="{{'Pictures' | translate}}" flow="down">
+                <i class="toggle-button__icon filetype-icon-picture"></i>
+                
+            </button>
         </div>
     </div>
 </div>
